fix: add blurr effect when filter is active

--- a/src/components/Dropdowns/DropdownFilter/DropdownFilter.module.scss
+++ b/src/components/Dropdowns/DropdownFilter/DropdownFilter.module.scss
@@ -70,7 +70,6 @@
   }
 }
 
-
 .dropdownInput {
   display: flex;
   align-items: center;
@@ -127,3 +126,27 @@
   line-height: 16px;
   margin-bottom: 10px;
 }
+
+.overlay {
+  display: none;
+@include mobile {
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 999;
+}
+}
+
+
+.blurBackground {
+  display: none;
+  @include mobile {
+    display: block;
+  filter: blur(5px);
+}
+}
+
